<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.or.setapp.login">




    <com.example.or.setapp.MyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:layout_above="@+id/facebook_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/faceboock_sign"
        android:textAllCaps="false"
        android:id="@+id/facebook_login"
        android:gravity="left|center"
        android:background="@drawable/facebookbutton"
        android:textColor="@color/white"
        android:layout_above="@+id/google_login"
        android:layout_alignStart="@+id/google_login" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/google_sign"
        android:id="@+id/google_login"
        android:gravity="left|center"
        android:textAllCaps="false"
        android:background="@drawable/googlebutton"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/watch"
        android:layout_above="@+id/textView"
        android:layout_alignStart="@+id/facebook_login" />


</RelativeLayout>
